# spot_teleoperation

./: .gitignore  CMakeLists.txt  README.md
include/: OculusRenderer.hpp  Shader.hpp  StreamCapture.hpp  main.hpp
scripts/: config.py  data_manager.py  data_processor.py  gamepad.py  gui.py  main.py  run.bat  stream.bat  xbox.py
scripts/spot/: input_controller.py  input_controllers.py  spot_client.py  spot_interface.py  zed_interface.py
scripts/stream/: plot_metrics.py  record_metrics.py  stats_metrics.py
src/: OculusRenderer.cpp  Shader.cpp  StreamCapture.cpp  main.cpp
